<resources>
    <string name="app_name">LiveGreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_data">DataView</string>
    <string name="menu_profile">Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="menu_settings">Settings</string>
    <string name="your_ecorank">Your Ecorank</string>
    <string name="height">Height (m)</string>
    <string name="weight">Weight (kg)</string>
    <string name="BMI">BMI</string>
    <string name="birthdate">Birthdate</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="export_files">Export</string>
    <string name="submit_data">Submit Data</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_account">Create account</string>
    <string name="return_hint">Return</string>
    <string name="enter_firstname_hint">Enter firstname</string>
    <string name="enter_surname_hint">Enter lastname</string>
    <string name="enter_age_hint">Enter age</string>
    <string name="enter_location_hint">Enter location</string>
    <string name="continue_hint">Continue</string>
    <string name="back_to_login">Back to login</string>
    <string name="enter_email_hint">Enter email</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="retype_password_hint">Retype password</string>
    <string name="login">Login</string>
    <string name="login_user">Login user</string>
    <string name="title_vege">VEGE</string>
    <string name="submit">SUBMIT</string>
    <string name="vege_high">1170g</string>
    <string name="title_meat">MEAT</string>
    <string name="meat_low">0g</string>
    <string name="meat_high">520g</string>
    <string name="title_dairy">DAIRY</string>
    <string name="dairy_low">0g</string>
    <string name="dairy_high">880g</string>
    <string name="vege_low">0g</string>
    <string name="cd_meat_icon">image of meat</string>
    <string name="cd_dairy_icon">image of dairy</string>
    <string name="cd_vege_icon">image of vegetables</string>
    <string name="user_profile_icon">User profile icon</string>
    <string name="user_ecorank_icon">User ecorank icon</string>
    <string name="eco_friendly_food_no_yes">Eco friendly food - No/Yes</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="profilename">Profilename</string>
    <string name="bmi">BMI</string>
    <string name="livegreen_logo">Livegreen Logo</string>
</resources>