<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_dark"
    tools:context="com.harkka.livegreen.roomdb.CreateUser1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/register"
        android:layout_width="155dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/continue_hint"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <Button
        android:id="@+id/toLogin"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/back_to_login"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/register"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password2"
        app:layout_constraintTop_toTopOf="@+id/register" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:hint="@string/enter_email_hint"
        android:background="@drawable/user_create_edittext_back"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/userId"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/user_create_edittext_back"
        android:padding="5dp"
        android:hint="@string/enter_username_hint"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/user_create_edittext_back"
        android:padding="5dp"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/userId"
        app:layout_constraintStart_toStartOf="@+id/userId"
        app:layout_constraintTop_toBottomOf="@+id/userId" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/user_create_edittext_back"
        android:padding="5dp"
        android:hint="@string/retype_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />



</androidx.constraintlayout.widget.ConstraintLayout>
